--- a/福州大学2021春软件工程实践S班第二次作业成绩.md
+++ b/福州大学2021春软件工程实践S班第二次作业成绩.md
@@ -46,6 +46,12 @@
 
 ## 第二次作业评分
 
+
+
+**注：对于分数有疑问的同学，请在明天下午（2021-03-22）1点之前反馈给老师或者助教这边**
+
+
+
 | 学号                                                         | 提交日期       | 问题重述 2 | 资料或事例 4 | 提问原因 8 | 问题质量 8 | 自问自答 8 | 附加题 5 | github链接和PSP 5 | 解题思路 3 | 设计与实现 20 | 性能改进 3 | 单元测试 5 | 异常处理 4 | 感想收获 5 | 自动化测试43 | 合理详细 4 | 代码符合规范 8 | 合计  |
 | ------------------------------------------------------------ | -------------- | ---------- | ------------ | ---------- | ---------- | ---------- | -------- | ----------------- | ---------- | ------------- | ---------- | ---------- | ---------- | ---------- | ------------ | ---------- | -------------- | ----- |
 | [22215](https://www.cnblogs.com/tarsss/p/14488489.html)      | 2021/3/5 21:08 | 2          | 4            | 8          | 8          | 8          | 5        | 5                 | 3          | 20            | 3          | 5          | 3          | 5          | 43           | 4          | 7              | 98.6  |
