--- a/福州大学2021春软件工程实践S班第二次作业成绩.md
+++ b/福州大学2021春软件工程实践S班第二次作业成绩.md
@@ -184,6 +184,7 @@
 | 22229              | 76    | 59.8  | 135.8  |
 | 22319              | 85    | 50.7  | 135.7  |
 | 22333              | 82    | 52    | 134    |
+| 03133              | 80    | 53.73 | 133.73 |
 | 22338              | 87    | 44    | 131    |
 | 22439              | 83    | 48    | 131    |
 | 22411              | 92    | 38.8  | 130.8  |
@@ -213,7 +214,6 @@
 | 22136              | 78    | 0     | 78     |
 | 22225              | 78    | 0     | 78     |
 | 22323              | 76    | 0     | 76     |
-| 03133              | 0     | 53.73 | 53.73  |
 | 22137              | 53    | 0     | 53     |
 | 22217              | 0     | 35.85 | 35.85  |
 | 22218              | 0     | 15.4  | 15.4   |
@@ -226,7 +226,7 @@
 
 ## 千帆竞发图
 
-![homework2](https://cdn.nlark.com/yuque/0/2021/png/757806/1616313287037-993b7d6c-1cb5-4f1f-826b-0bd174cf3743.png?x-oss-process=image%2Fresize%2Cw_746)
+![homework2](https://cdn.nlark.com/yuque/0/2021/png/757806/1616321717109-97b1a071-e37e-4e0c-ab6c-3da51f5a4aff.png)
 
 
 
