--- a/第二次作业成绩.md
+++ b/第二次作业成绩.md
@@ -18,7 +18,7 @@
 
 
 
-## 存在问题
+## 存在的问题
 
 本次作业很多同学的编程部分得了0分，主要存在以下问题：
 
@@ -138,7 +138,7 @@
 
 
 
-## 累积分（截至到第二次作业）
+## 累积分（截至第二次作业）
 
 | 学号前两位和后三位 | 作业1 | 作业2 | 累积分 |
 | ------------------ | ----- | ----- | ------ |
