--- a/结对作业一成绩.md
+++ b/结对作业一成绩.md
@@ -8,7 +8,7 @@
 整体上大家的作业完成得都比较好，期待大家在结对作业二中的实现~
 
 
-## 存在问题
+## 存在的问题
 
 1. 有的小组遗漏了效能分析的内容，因此扣除了一些分数
 
@@ -61,7 +61,7 @@
 | [22212&22228](https://www.cnblogs.com/xirensblog/p/14526423.html) | 2021-03-12 21:20 |                    2                    |            20            |                 3                  |        23         |           14            |          8          |          5           |          10           |          5          |  90  |
 | [22324&22319](https://www.cnblogs.com/boy-nextdoor/p/14526895.html) | 2021-03-12 22:54 |                    2                    |            15            |                 3                  |        23         |            7            |         10          |          5           |          10           |          4          |  79  |
 
-## 累积分（截至到结对作业一）
+## 累积分（截至结对作业一）
 
 | 学号（前2+后3） | 作业1 | 作业2 | 作业3 | 累积分 |
 | :-------------: | :---: | :---: | :---: | :----: |
