--- a/结对作业一成绩.md
+++ b/结对作业一成绩.md
@@ -149,7 +149,7 @@
 
 ## 千帆竞发图
 
-![homework3](https://raw.githubusercontent.com/FZUSESPR21/Class_Resources/master/pictures/%E7%BB%93%E5%AF%B9%E4%BD%9C%E4%B8%9A%E4%B8%80%E5%8D%83%E5%B8%86%E5%9B%BE.png)
+![homework3](https://raw.githubusercontent.com/FZUSESPR21/Class_Resources/master/pictures/%E7%AC%AC%E4%B8%89%E6%AC%A1%E4%BD%9C%E4%B8%9A%E5%8D%83%E5%B8%86%E5%9B%BE.png)
 
 
 ## 附
