--- a/结对作业二评分.md
+++ b/结对作业二评分.md
@@ -154,7 +154,7 @@
 
 ## 千帆竞发图
 
-![homework6](C:\Users\hh\AppData\Roaming\Typora\typora-user-images\image-20210418161354919.png)
+![homework6](https://raw.githubusercontent.com/FZUSESPR21/Class_Resources/master/pictures/%E7%BB%93%E5%AF%B9%E4%BD%9C%E4%B8%9A%E4%BA%8C.png)
 
 
 ## 附
