--- a/结对作业二评分.md
+++ b/结对作业二评分.md
@@ -19,50 +19,49 @@
 
 **注：对于分数有疑问的同学，请在明天下午（2021-04-19）1点之前反馈给老师或者助教**
 
-1. 对于截止后发起的pull request，GitHub使用评分折算50%。
-2. 博客评分时对照了提交时的快照，截止后修改的内容没有纳入评分考量。
+1. 严禁抄袭，抄袭的作业会按照规则扣除100%的分数；
+2. 对于截止后发起的pull request，GitHub使用评分折算50%。
+3. 博客评分时对照了提交时的快照，截止后修改的内容没有纳入评分考量。
 
 | 结对编号                                                     | 排版 5 | 链接 5 | PSP 5 | 成品展示 30 | 结对过程描述和设计实现 30 | 代码说明 10 | 收获&评价 15 | 博客总分 | 代码规范 10 | github 15 | 列表操作 30 | 分析 35 | 部署 10 | 爬取 +15 | 其他附加 +15 | 程序总分 | 作业得分 |
 | ------------------------------------------------------------ | ------ | ------ | ----- | ----------- | ------------------------- | ----------- | ------------ | -------- | ----------- | --------- | ----------- | ------- | ------- | -------- | ------------ | -------- | -------- |
-| [03133&13208](https://www.cnblogs.com/Hans-LYT/p/14600748.html) | 3      | 5      | 5     | 30          | 30                        | 10          | 15           | 24.5     | 6           | 6         | 21          | 12      | 10      | 0        | 0            | 41.25    | 65.75    |
-| [07114&04114](https://www.cnblogs.com/jcblogs2021/p/14601024.html) | 5      | 5      | 5     | 25          | 25                        | 10          | 15           | 22.5     | 9           | 15        | 24          | 35      | 10      | 0        | 0            | 69.75    | 92.25    |
-| [22101&22122](https://www.cnblogs.com/scott233/p/14601662.html) | 3      | 5      | 5     | 15          | 30                        | 10          | 15           | 20.75    | 6           | 14        | 30          | 33      | 10      | 0        | 0            | 69.75    | 90.5     |
-| [22104&22339](https://www.cnblogs.com/xyh-Tse/p/14589528.html) | 3      | 0      | 5     | 30          | 30                        | 10          | 15           | 23.25    | 8           | 10        | 18          | 13      | 0       | 0        | 0            | 36.75    | 60       |
-| [22110&22105](https://www.cnblogs.com/hkr-blog/p/14557688.html) | 5      | 5      | 5     | 30          | 30                        | 10          | 15           | 25       | 8           | 14        | 18          | 18      | 10      | 0        | 0            | 51       | 76       |
-| [22111&22132](https://www.cnblogs.com/111K/p/14600920.html)  | 5      | 5      | 5     | 30          | 30                        | 10          | 15           | 25       | 9           | 12        | 26          | 33      | 10      | 0        | 0            | 67.5     | 92.5     |
-| [22114&22135](https://www.cnblogs.com/silicon-bond/p/14601141.html) | 5      | 5      | 5     | 30          | 30                        | 10          | 15           | 25       | 9           | 15        | 28          | 35      | 10      | 0        | 0            | 72.75    | 97.75    |
-| [22115&22108](https://www.cnblogs.com/entsjtsmf/p/14604261.html) | 5      | 5      | 5     | 30          | 30                        | 10          | 15           | 25       | 9           | 14        | 28          | 33      | 10      | 0        | 0            | 70.5     | 95.5     |
 | [22116&22112](https://www.cnblogs.com/spititcskblog/p/14603224.html) | 5      | 5      | 5     | 30          | 30                        | 10          | 15           | 25       | 9           | 15        | 28          | 33      | 10      | 5        | 0            | 75       | 100      |
-| [22118&22136](https://www.cnblogs.com/118wh/p/14594468.html) | 3      | 0      | 5     | 15          | 30                        | 10          | 15           | 19.5     | 7           | 7         | 24          | 29      | 0       | 2        | 0            | 51.75    | 71.25    |
-| [22125&22103](https://www.cnblogs.com/yabi/p/14603155.html)  | 5      | 5      | 5     | 30          | 30                        | 10          | 15           | 25       | 6           | 14        | 26          | 29      | 10      | 4        | 0            | 66.75    | 91.75    |
-| [22126&03124](https://www.cnblogs.com/yangzishen/p/14599604.html) | 4      | 5      | 5     | 30          | 30                        | 10          | 15           | 24.75    | 9           | 15        | 26          | 33      | 10      | 3        | 0            | 72       | 96.75    |
-| [22127&22106](https://www.cnblogs.com/fzu221801127/p/14603892.html) | 3      | 5      | 5     | 20          | 30                        | 10          | 15           | 22       | 9           | 13        | 26          | 29      | 10      | 4        | 2            | 69.75    | 91.75    |
-| [22130&22109](https://www.cnblogs.com/liangyangxin/p/14599629.html) | 5      | 5      | 5     | 30          | 30                        | 10          | 15           | 25       | 8           | 15        | 24          | 33      | 10      | 0        | 0            | 67.5     | 92.5     |
-| [22131&22121](https://www.cnblogs.com/fu12138/p/14598946.html) | 5      | 5      | 5     | 6           | 30                        | 10          | 15           | 19       | 8           | 15        | 26          | 33      | 10      | 0        | 0            | 69       | 88       |
-| [22202&22211](https://www.cnblogs.com/Lious-Rios/p/14604175.html) | 5      | 5      | 5     | 30          | 30                        | 10          | 15           | 25       | 7           | 14        | 24          | 29      | 10      | 4        | 0            | 66       | 91       |
-| [22205&22234](https://www.cnblogs.com/gzblog/p/14604176.html) | 4      | 5      | 5     | 30          | 30                        | 10          | 15           | 24.75    | 8           | 14        | 28          | 31      | 10      | 3        | 0            | 70.5     | 95.25    |
-| [22206&22216](https://www.cnblogs.com/maoeating/p/14600303.html) | 5      | 0      | 5     | 30          | 30                        | 10          | 15           | 23.75    | 8           | 14        | 28          | 23      | 0       | 4        | 0            | 57.75    | 81.5     |
-| [22209&22222](https://www.cnblogs.com/ccreater/p/14604051.html) | 4      | 5      | 5     | 30          | 30                        | 10          | 15           | 24.75    | 10          | 14        | 26          | 33      | 10      | 4        | 0            | 72.75    | 97.5     |
-| [22212&22228](https://www.cnblogs.com/xirensblog/p/14604281.html) | 5      | 5      | 5     | 15          | 25                        | 0           | 0            | 13.75    | 8           | 15        | 28          | 29      | 10      | 0        | 0            | 67.5     | 81.25    |
 | [22215&22231](https://www.cnblogs.com/tarsss/p/14604218.html) | 5      | 5      | 5     | 30          | 30                        | 10          | 15           | 25       | 7           | 15        | 28          | 35      | 10      | 4        | 1            | 75       | 100      |
-| [22219&22218](https://www.cnblogs.com/fuguidelaoniu/p/14604180.html) | 5      | 5      | 5     | 25          | 30                        | 10          | 15           | 23.75    | 9           | 14        | 28          | 27      | 10      | 4        | 0            | 69       | 92.75    |
-| [22225&22214](https://www.cnblogs.com/-225/p/14603191.html)  | 2      | 0      | 5     | 30          | 30                        | 10          | 15           | 23       | 8           | 11        | 28          | 26      | 0       | 0        | 0            | 54.75    | 77.75    |
-| [22226&22232](https://www.cnblogs.com/hannahShaw/p/14593522.html) | 3      | 5      | 5     | 30          | 30                        | 10          | 15           | 24.5     | 9           | 15        | 26          | 27      | 0       | 4        | 0            | 60.75    | 85.25    |
 | [22230&22334](https://www.cnblogs.com/w-wwh/p/14594059.html) | 5      | 5      | 5     | 30          | 30                        | 10          | 15           | 25       | 9           | 15        | 26          | 35      | 10      | 0        | 3            | 73.5     | 98.5     |
-| [22233&22411](https://www.cnblogs.com/cpz1/p/14604109.html)  | 5      | 5      | 5     | 30          | 30                        | 10          | 15           | 25       | 8           | 12        | 26          | 27      | 10      | 4        | 0            | 65.25    | 90.25    |
-| [22309&22309](https://www.cnblogs.com/hsc2021/p/14604273.html) | 4      | 0      | 5     | 25          | 25                        | 10          | 12           | 20.25    | 8           | 5.5       | 24          | 25      | 0       | 0        | 0            | 46.875   | 67.125   |
-| [22310&22325](https://www.cnblogs.com/t0p1Crayon/p/14604088.html) | 2      | 0      | 5     | 0           | 20                        | 10          | 0            | 9.25     | 8           | 14        | 28          | 18      | 10      | 0        | 0            | 58.5     | 67.75    |
+| [22114&22135](https://www.cnblogs.com/silicon-bond/p/14601141.html) | 5      | 5      | 5     | 30          | 30                        | 10          | 15           | 25       | 9           | 15        | 28          | 35      | 10      | 0        | 0            | 72.75    | 97.75    |
+| [22209&22222](https://www.cnblogs.com/ccreater/p/14604051.html) | 4      | 5      | 5     | 30          | 30                        | 10          | 15           | 24.75    | 10          | 14        | 26          | 33      | 10      | 4        | 0            | 72.75    | 97.5     |
 | [22314&22321](https://www.cnblogs.com/starlite/p/14604231.html) | 3      | 5      | 5     | 30          | 30                        | 10          | 15           | 24.5     | 9           | 15        | 28          | 35      | 10      | 0        | 0            | 72.75    | 97.25    |
-| [22324&22319](https://www.cnblogs.com/boy-nextdoor/p/14604256.html) | 5      | 0      | 5     | 0           | 0                         | 0           | 0            | 2.5      | 8           | 10        | 21          | 18      | 10      | 0        | 0            | 50.25    | 52.75    |
-| [22330&22332](https://www.cnblogs.com/weirdo123/p/14600900.html) | -5     | -5     | -5    | -30         | -30                       | -10         | -15          | -25      | -10         | -15       | -30         | -35     | -10     | 0        | 0            | -75      | -100     |
-| [22333&22235](https://www.cnblogs.com/040lsl/p/14603780.html) | 5      | 0      | 5     | 5           | 15                        | 10          | 15           | 13.75    | 7           | 5.5       | 26          | 29      | 0       | 0        | 0            | 50.625   | 64.375   |
-| [22338&22335](https://www.cnblogs.com/fenghaohao/p/14604154.html) | 3      | 5      | 5     | 30          | 30                        | 10          | 15           | 24.5     | 8           | 5.5       | 21          | 21      | 10      | 0        | 0            | 49.125   | 73.625   |
-| [22410&04406](https://www.cnblogs.com/410hb/p/14600884.html) | 5      | 5      | 5     | 30          | 30                        | 10          | 15           | 25       | 9           | 15        | 26          | 31      | 10      | 0        | 0            | 68.25    | 93.25    |
+| [22126&03124](https://www.cnblogs.com/yangzishen/p/14599604.html) | 4      | 5      | 5     | 30          | 30                        | 10          | 15           | 24.75    | 9           | 15        | 26          | 33      | 10      | 3        | 0            | 72       | 96.75    |
+| [22115&22108](https://www.cnblogs.com/entsjtsmf/p/14604261.html) | 5      | 5      | 5     | 30          | 30                        | 10          | 15           | 25       | 9           | 14        | 28          | 33      | 10      | 0        | 0            | 70.5     | 95.5     |
+| [22205&22234](https://www.cnblogs.com/gzblog/p/14604176.html) | 4      | 5      | 5     | 30          | 30                        | 10          | 15           | 24.75    | 8           | 14        | 28          | 31      | 10      | 3        | 0            | 70.5     | 95.25    |
 | [22432&22429](https://www.cnblogs.com/nokiblogs/p/14599128.html) | 5      | 5      | 5     | 30          | 30                        | 10          | 15           | 25       | 9           | 14        | 28          | 31      | 10      | 0        | 0            | 69       | 94       |
 | [22438&22430](https://www.cnblogs.com/chutiiing/p/14604211.html) | 3      | 5      | 5     | 30          | 30                        | 10          | 15           | 24.5     | 8           | 15        | 28          | 27      | 10      | 4        | 0            | 69       | 93.5     |
+| [22410&04406](https://www.cnblogs.com/410hb/p/14600884.html) | 5      | 5      | 5     | 30          | 30                        | 10          | 15           | 25       | 9           | 15        | 26          | 31      | 10      | 0        | 0            | 68.25    | 93.25    |
+| [22219&22218](https://www.cnblogs.com/fuguidelaoniu/p/14604180.html) | 5      | 5      | 5     | 25          | 30                        | 10          | 15           | 23.75    | 9           | 14        | 28          | 27      | 10      | 4        | 0            | 69       | 92.75    |
+| [22111&22132](https://www.cnblogs.com/111K/p/14600920.html)  | 5      | 5      | 5     | 30          | 30                        | 10          | 15           | 25       | 9           | 12        | 26          | 33      | 10      | 0        | 0            | 67.5     | 92.5     |
+| [22130&22109](https://www.cnblogs.com/liangyangxin/p/14599629.html) | 5      | 5      | 5     | 30          | 30                        | 10          | 15           | 25       | 8           | 15        | 24          | 33      | 10      | 0        | 0            | 67.5     | 92.5     |
+| [07114&04114](https://www.cnblogs.com/jcblogs2021/p/14601024.html) | 5      | 5      | 5     | 25          | 25                        | 10          | 15           | 22.5     | 9           | 15        | 24          | 35      | 10      | 0        | 0            | 69.75    | 92.25    |
+| [22125&22103](https://www.cnblogs.com/yabi/p/14603155.html)  | 5      | 5      | 5     | 30          | 30                        | 10          | 15           | 25       | 6           | 14        | 26          | 29      | 10      | 4        | 0            | 66.75    | 91.75    |
+| [22127&22106](https://www.cnblogs.com/fzu221801127/p/14603892.html) | 3      | 5      | 5     | 20          | 30                        | 10          | 15           | 22       | 9           | 13        | 26          | 29      | 10      | 4        | 2            | 69.75    | 91.75    |
+| [22202&22211](https://www.cnblogs.com/Lious-Rios/p/14604175.html) | 5      | 5      | 5     | 30          | 30                        | 10          | 15           | 25       | 7           | 14        | 24          | 29      | 10      | 4        | 0            | 66       | 91       |
 | [22439&22416](https://www.cnblogs.com/liliku/p/14567933.html) | 5      | 5      | 5     | 30          | 30                        | 10          | 15           | 25       | 8           | 12        | 28          | 30      | 10      | 0        | 0            | 66       | 91       |
-
-
+| [22101&22122](https://www.cnblogs.com/scott233/p/14601662.html) | 3      | 5      | 5     | 15          | 30                        | 10          | 15           | 20.75    | 6           | 14        | 30          | 33      | 10      | 0        | 0            | 69.75    | 90.5     |
+| [22233&22411](https://www.cnblogs.com/cpz1/p/14604109.html)  | 5      | 5      | 5     | 30          | 30                        | 10          | 15           | 25       | 8           | 12        | 26          | 27      | 10      | 4        | 0            | 65.25    | 90.25    |
+| [22131&22121](https://www.cnblogs.com/fu12138/p/14598946.html) | 5      | 5      | 5     | 6           | 30                        | 10          | 15           | 19       | 8           | 15        | 26          | 33      | 10      | 0        | 0            | 69       | 88       |
+| [22226&22232](https://www.cnblogs.com/hannahShaw/p/14593522.html) | 3      | 5      | 5     | 30          | 30                        | 10          | 15           | 24.5     | 9           | 15        | 26          | 27      | 0       | 4        | 0            | 60.75    | 85.25    |
+| [22206&22216](https://www.cnblogs.com/maoeating/p/14600303.html) | 5      | 0      | 5     | 30          | 30                        | 10          | 15           | 23.75    | 8           | 14        | 28          | 23      | 0       | 4        | 0            | 57.75    | 81.5     |
+| [22212&22228](https://www.cnblogs.com/xirensblog/p/14604281.html) | 5      | 5      | 5     | 15          | 25                        | 0           | 0            | 13.75    | 8           | 15        | 28          | 29      | 10      | 0        | 0            | 67.5     | 81.25    |
+| [22225&22214](https://www.cnblogs.com/-225/p/14603191.html)  | 2      | 0      | 5     | 30          | 30                        | 10          | 15           | 23       | 8           | 11        | 28          | 26      | 0       | 0        | 0            | 54.75    | 77.75    |
+| [22110&22105](https://www.cnblogs.com/hkr-blog/p/14557688.html) | 5      | 5      | 5     | 30          | 30                        | 10          | 15           | 25       | 8           | 14        | 18          | 18      | 10      | 0        | 0            | 51       | 76       |
+| [22338&22335](https://www.cnblogs.com/fenghaohao/p/14604154.html) | 3      | 5      | 5     | 30          | 30                        | 10          | 15           | 24.5     | 8           | 5.5       | 21          | 21      | 10      | 0        | 0            | 49.125   | 73.625   |
+| [22118&22136](https://www.cnblogs.com/118wh/p/14594468.html) | 3      | 0      | 5     | 15          | 30                        | 10          | 15           | 19.5     | 7           | 7         | 24          | 29      | 0       | 2        | 0            | 51.75    | 71.25    |
+| [22310&22325](https://www.cnblogs.com/t0p1Crayon/p/14604088.html) | 2      | 0      | 5     | 0           | 20                        | 10          | 0            | 9.25     | 8           | 14        | 28          | 18      | 10      | 0        | 0            | 58.5     | 67.75    |
+| [22309&22309](https://www.cnblogs.com/hsc2021/p/14604273.html) | 4      | 0      | 5     | 25          | 25                        | 10          | 12           | 20.25    | 8           | 5.5       | 24          | 25      | 0       | 0        | 0            | 46.875   | 67.125   |
+| [03133&13208](https://www.cnblogs.com/Hans-LYT/p/14600748.html) | 3      | 5      | 5     | 30          | 30                        | 10          | 15           | 24.5     | 6           | 6         | 21          | 12      | 10      | 0        | 0            | 41.25    | 65.75    |
+| [22333&22235](https://www.cnblogs.com/040lsl/p/14603780.html) | 5      | 0      | 5     | 5           | 15                        | 10          | 15           | 13.75    | 7           | 5.5       | 26          | 29      | 0       | 0        | 0            | 50.625   | 64.375   |
+| [22104&22339](https://www.cnblogs.com/xyh-Tse/p/14589528.html) | 3      | 0      | 5     | 30          | 30                        | 10          | 15           | 23.25    | 8           | 10        | 18          | 13      | 0       | 0        | 0            | 36.75    | 60       |
+| [22324&22319](https://www.cnblogs.com/boy-nextdoor/p/14604256.html) | 5      | 0      | 5     | 0           | 0                         | 0           | 0            | 2.5      | 8           | 10        | 21          | 18      | 10      | 0        | 0            | 50.25    | 52.75    |
+| [22330&22332](https://www.cnblogs.com/weirdo123/p/14600900.html) | -5     | -5     | -5    | -30         | -30                       | -10         | -15          | -25      | -10         | -15       | -30         | -35     | -10     | 0        | 0            | -75      | -100     |
 
 ## 累积分（截至结对作业二）
 
