--- a/各团队问题收集.md
+++ b/各团队问题收集.md
@@ -1,5 +1,15 @@
 已同步更新到[班级Github](https://github.com/FZUSESPR21/Class_Resources/blob/master/%E5%90%84%E5%9B%A2%E9%98%9F%E9%97%AE%E9%A2%98%E6%94%B6%E9%9B%86.md)
 
+## 2021-04-27
+
+Q: 关于团队分配问题，如果有分配不均的问题，你们怎么解决呢？
+
+> 一个队长的回复：我们组任务轻的同学 例如两个pm会主动去找前后端同学商量需不需要帮忙写组件或者某种mapping，我们组任务分解完每个人其实都不多 我是有稍微看一下大家任务分配情况的 会主动去补位 就是项目刚开始搭建前端会稍微慢一些 需要熟悉一下环境以及规范之类的 后端已经写出挺多接口了
+
+Q: 关于团队开发的一个tips
+
+> 项目开始的时候，最好规定好自己的项目所需要的软件版本，比如jdk1.8还是jdk11，nodejs版本等，项目在搭建的时候，最好把大家电脑上的开发环境的版本统一，这样可以避免很多不必要的麻烦。
+
 ## 2021-04-26
 
 Q: alpha冲刺和beta冲刺有界线吗？没有找到这两个冲刺的定义,我们目前是按模块分，alpha阶段完成哪些模块，beta阶段完成哪些模块？不知道alpha冲刺和beta冲刺有没有本质区别？
