--- a/各团队问题收集.md
+++ b/各团队问题收集.md
@@ -80,9 +80,9 @@ Q: 关键路径图有什么用？
 Q: 关于在GitHub进行项目管理的tips
 
 > 首先列出之前提到的两个github项目管理教程：
-> - https://github.com/FZUSESPR21/Class_Resources/discussions/11
-> - https://www.cnblogs.com/HansBug/p/14711869.html
+> - [使用Github Project，Issue，Milestone来管理项目](https://github.com/FZUSESPR21/Class_Resources/discussions/11)
+> - [【项目管理】关于Issue/Milestone的使用指导](https://www.cnblogs.com/HansBug/p/14711869.html)
 >
 > 此外，冲刺博客还要求提供燃尽图。可以参考下方博客的第一种方式，[开源项目burnchart](https://github.com/radekstepan/burnchart)可以利用github仓库的信息生成燃尽图，这样就不需要再切换别的项目管理软件啦：
-> - https://www.cnblogs.com/SivilTaram/p/4900457.html
+> - [使用Github生成燃尽图](https://www.cnblogs.com/SivilTaram/p/4900457.html)
 > - 注意，如果直接使用线上的版本，应该只支持按照1 issue = 1 point计算燃尽图
