--- a/homeworks/作业10_软件评测.md
+++ b/homeworks/作业10_软件评测.md
@@ -43,16 +43,18 @@
 以及北航的两份作业作为参考：
 [Shaun_Yao](https://www.cnblogs.com/tcyhost/p/14620045.html), [VOIDMalkuth's Blog](https://www.cnblogs.com/VOIDMalkuth/p/14634341.html)
 
-**注：上方两份作业分别选择了第一类产品和第二类产品；可以主要参考BUG描述部分；其他分析部分，为了避免先入为主，可以选择跳过。禁止抄袭。**
+**注：上方两份作业分别选择了第一类产品和第二类产品；可以参考BUG描述部分；为了避免先入为主，可以选择跳过其他分析部分。禁止抄袭。**
 
 # 一、本学期供分析的产品：
+
+从下面提供的2类候选软件中**选择一类**，完成后续任务：
 
 1. 作为一个 IT 行业的学生或从业者，如果你碰到了问题， 你去哪里寻找答案呢？ 请比较至少 3 个 IT 问答网站**并尝试体验提问和回答问题**：列出它们具体的优缺点，并说明如果你来主持工作，你会怎么改进。
    1. [CSDN开发者互助问答社区_程序员有问必答-CSDN问答](https://ask.csdn.net/)
    2. [Stack Overflow - Where Developers Learn, Share, & Build Careers](https://stackoverflow.com/)
    3. [SegmentFault 思否](https://segmentfault.com/questions)
 
-   **注：提问需要遵守相应社区规范（例如[stackoverflow how to ask](https://stackoverflow.com/questions/ask/advice)，[如何写高质量的提问和回答](https://ask.csdn.net/questions/7400889)，[SegmentFault FAQ](https://segmentfault.com/faq)），避免无意义的水问题。**
+   **注：提问需要遵守相应社区规范（例如[Stack Overflow: how to ask](https://stackoverflow.com/questions/ask/advice)，[如何写高质量的提问和回答](https://ask.csdn.net/questions/7400889)，[SegmentFault FAQ](https://segmentfault.com/faq)），避免无意义的水问题。**
    
 2. 代码仓库管理系统有很多，他们对于你熟悉的目标用户 （中国高校大学生）有什么缺陷和需要改进的地方，并且该如何改进？ 请**上手使用并分析**以下三个常见的代码仓库：
    1. [CODE.CHINA](https://codechina.csdn.net)
@@ -142,8 +144,9 @@
 
 ### 注
 
-- 博客需要分别描述同类中三个软件的体验、BUG（如果能够找到）和结论；
-- 对于GItHub和Stack Overflow等对象，找出功能性bug可能不是一件容易的事情；因此要求至少从**三个测评对象中找到1个**功能性bug。
+- 对于GitHub和Stack Overflow等对象，找出高质量的功能性Bug可能不是一件容易的事情；因此要求**至少从三个测评对象中找到1个高质量的功能性Bug**。
+
+- 博客需要分别描述同类中三个软件的体验、BUG（如果没有找到，说明即可）和结论；
 
 ## 第二部分 分析(参考8.6节对工作的估计，和14.1节软件工程的质量)
 
@@ -204,15 +207,15 @@
 - 第一部分 调研，评测
   - CODE.CHINA
     - 体验
-    - [BUG]
+    - BUG
     - 结论
   - GitHub
     - 体验
-    - [BUG]
+    - BUG
     - 结论
   - Gitee
     - 体验
-    - [BUG]
+    - BUG
     - 结论
 - 第二部分 分析
   - 开发时间估计
@@ -244,26 +247,31 @@
 
 # 四、评分标准
 
-从上面提供的2类候选软件中**选择一类**，对其优缺点进行系统分析。
+本次作业基础部分最高为100分；附加部分40分计入总分，即本次作业最高分为140分：
 
 第一部分：
 
 1. 三个软件的体验描述【20】
-2. 三个软件的BUG描述【20】
-3. 三个软件定性和定量的结论【10】
-4. 附加分：用户采访【10】
-5. 附加分：BUG反馈【5】
+   - 基本功能介绍和使用【5】
+   - 优缺点分析【10】
+   - 改进意见【5】
+2. 三个软件中，至少1个高质量的功能性Bug的描述【10】
+3. 附加分：三个软件中，其他高质量的功能性Bug的描述【15】
+4. 三个软件定性和定量的结论【10】
+5. 附加分：用户采访【10】
+6. 附加分：BUG反馈【5】
 
 第二部分：
 
 1. 开发时间估计【5】
-2. 同类产品对比排名【10】
+2. 同类产品对比和排名【10】
 3. 附加分：软件工程方面的建议【5】
 4. 附加分：BUG存在的原因分析【5】
 
 第三部分：
 
-1. 市场概况【5】
-2. 市场现状【5】
-3. 市场与产品生态【5】
-4. 产品规划【10】
+1. 对于市场概况、市场现状以及市场与产品生态部分，回答至少三分之二的问题【25】
+2. 产品规划【20】
+   - 功能以及NABCD分析【10】
+   - 角色配置【5】
+   - 16周的详细计划【5】
