--- a/homeworks/作业10_软件评测.md
+++ b/homeworks/作业10_软件评测.md
@@ -72,7 +72,7 @@
 - **介绍和使用软件：**介绍软件基本功能；使用这个软件的基本功能10–30分钟，并上传使用软件的照片
 - **优缺点分析:**描述使用这个产品的过程，解决了用户的问题么？软件在数据量/界面/功能/准确度上各有什么优缺点？用户体验方面有问题么？
 - **对产品有什么改进意见？**
-- **【加分项】采访另一个用户:** 让 TA 也使用这个软件/服务， TA 能上手使用么？ 有什么明显的困难， 软件的开发团队为何没有意识到这些初始用户会碰到的困难？
+- **【进阶】采访另一个用户:** 让 TA 也使用这个软件/服务， TA 能上手使用么？ 有什么明显的困难， 软件的开发团队为何没有意识到这些初始用户会碰到的困难？
   （请将采访过程以图片和文字的方式记录下来，且要求采访对象为其他软工班级的学生；如果TA也要完成软件评测的作业，要求TA选择的测评对象和你的不一样）
   记录请至少包含以下几点：
   a. 采访对象的背景，为什么选择这个人采访？TA 的需求是什么？
@@ -116,7 +116,7 @@
 
     - 对Bug的一系列其他分析，可以自由发挥
 
-- **【加分项】Bug 反馈**
+- **【进阶】Bug 反馈**
   - 对于开源软件，如果你已经确定找到的 Bug 可复现，确实不是 Feature 或者乌龙，并且能让其他人也验证该 Bug 的存在，我们非常鼓励你你向开发团队提出 issue，请参考这个[Github 上的 issue](https://github.com/simplecov-ruby/simplecov-html/issues/92?fileGuid=qk0PYOfe3cYJ6ha7)，用**简洁准确**的语言进行描述。例如：
     - 对于GitHub Desktop，可以在这里提交issue：https://github.com/desktop/desktop
   - 对于其他软件，通过官方提供的反馈方式提交你发现的Bug，例如：
@@ -164,9 +164,9 @@
 
 2. 分析这个软件目前的优劣(和类似软件相比)，这个产品的质量在同类产品中估计名列第几？
 
-3. 【加分项】从各方面的问题，推理出这个软件团队在软件工程方面可以提高的一个重要方面(具体建议)。
+3. 【进阶】从各方面的问题，推理出这个软件团队在软件工程方面可以提高的一个重要方面(具体建议)。
 
-4. 【加分项】你在第一部分发现的bug，为何软件团队不能在发布前修复？他们是不知道，还是有意不修复？你觉得是什么原因？可以从下面的可能性中选取几个：
+4. 【进阶】你在第一部分发现的bug，为何软件团队不能在发布前修复？他们是不知道，还是有意不修复？你觉得是什么原因？可以从下面的可能性中选取几个：
 
    > - 对用户需求掌握不好
    > - 具体的设计质量不高
@@ -247,31 +247,31 @@
 
 # 四、评分标准
 
-本次作业基础部分最高为100分；附加部分40分计入总分，即本次作业最高分为140分：
+本次作业基础部分最高为100分；进阶部分40分计入总分，即本次作业最高分为140分：
 
 第一部分：
 
-1. 三个软件的体验描述【20】
+1. 三个软件的体验描述【20】【覆盖课程目标4】
    - 基本功能介绍和使用【5】
    - 优缺点分析【10】
    - 改进意见【5】
-2. 三个软件中，至少1个高质量的功能性Bug的描述【10】
-3. 附加分：三个软件中，其他高质量的功能性Bug的描述【15】
-4. 三个软件定性和定量的结论【10】
-5. 附加分：用户采访【10】
-6. 附加分：BUG反馈【5】
+2. 三个软件中，至少1个高质量的功能性Bug的描述【10】【覆盖课程目标5】
+3. 进阶分：三个软件中，其他高质量的功能性Bug的描述【15】【覆盖课程目标5】
+4. 三个软件定性和定量的结论【10】【覆盖课程目标4】
+5. 进阶分：用户采访【10】【覆盖课程目标5】
+6. 进阶分：BUG反馈【5】【覆盖课程目标5】
 
 第二部分：
 
-1. 开发时间估计【5】
-2. 同类产品对比和排名【10】
-3. 附加分：软件工程方面的建议【5】
-4. 附加分：BUG存在的原因分析【5】
+1. 开发时间估计【5】【覆盖课程目标5】
+2. 同类产品对比和排名【10】【覆盖课程目标4】
+3. 进阶分：软件工程方面的建议【5】【覆盖课程目标4】
+4. 进阶分：BUG存在的原因分析【5】【覆盖课程目标4】
 
 第三部分：
 
-1. 对于市场概况、市场现状以及市场与产品生态部分，回答至少三分之二的问题【25】
+1. 对于市场概况、市场现状以及市场与产品生态部分，回答至少三分之二的问题【25】【覆盖课程目标4】
 2. 产品规划【20】
-   - 功能以及NABCD分析【10】
-   - 角色配置【5】
-   - 16周的详细计划【5】
+   - 功能以及NABCD分析【10】【覆盖课程目标4】
+   - 角色配置【5】【覆盖课程目标5】
+   - 16周的详细计划【5】【覆盖课程目标5】
