--- a/homeworks/作业10_软件评测.md
+++ b/homeworks/作业10_软件评测.md
@@ -275,3 +275,19 @@
    - 功能以及NABCD分析【10】【覆盖课程目标4】
    - 角色配置【5】【覆盖课程目标5】
    - 16周的详细计划【5】【覆盖课程目标5】
+
+---
+
+本次作业结束后的实践课会进行该次作业的展示。因为时间关系，无法全体同学一一汇报，因此将从两类产品中各选取5个同学上来进行现场展示和报告：
+
+- 助教提供在线表格，请同学登记自己选择的测试类别以及是否申请报告
+- 主动申请进行报告，获得额外【10分】“勇气分”
+
+- 主动申请人数大于5人时，将从申请者中随机抽取5人展示；没有被抽中的，也可以获得【10分】的加分
+- 主动申请人数小于5人时，将从未申请者中抽取剩余所需人数，不获得【10分】的加分
+
+现场报告的同学可获得最高【10分】的完成分：
+
+- 如果博客排版整洁美观，有充分的图片文字说明，可以使用博客进行展示，不需要额外制作ppt
+
+- 需要展示者制作评审表格，由各组代表（不包含展示者所在小组），老师和助教进行评分；比例为：`各组平均打分 * 0.25 + 助教平均打分 * 0.35 + 老师平均打分 * 0.4`
