--- a/homeworks/作业10_软件评测.md
+++ b/homeworks/作业10_软件评测.md
@@ -54,7 +54,11 @@
    2. [Stack Overflow - Where Developers Learn, Share, & Build Careers](https://stackoverflow.com/)
    3. [SegmentFault 思否](https://segmentfault.com/questions)
 
-   **注：提问需要遵守相应社区规范（例如[Stack Overflow: how to ask](https://stackoverflow.com/questions/ask/advice)，[如何写高质量的提问和回答](https://ask.csdn.net/questions/7400889)，[SegmentFault FAQ](https://segmentfault.com/faq)），避免无意义的水问题。**
+   **注：**
+   
+   - 对于问答网站，存在两种用户的需求：提问者和回答者；可以考虑从两个角度改进。
+   
+   - 提问需要遵守相应社区规范（例如[Stack Overflow: how to ask](https://stackoverflow.com/questions/ask/advice)，[如何写高质量的提问和回答](https://ask.csdn.net/questions/7400889)，[SegmentFault FAQ](https://segmentfault.com/faq)），避免无意义的水问题。
    
 2. 代码仓库管理系统有很多，他们对于你熟悉的目标用户 （中国高校大学生）有什么缺陷和需要改进的地方，并且该如何改进？ 请**上手使用并分析**以下三个常见的代码仓库：
    1. [CODE.CHINA](https://codechina.csdn.net)
@@ -120,8 +124,8 @@
   - 对于开源软件，如果你已经确定找到的 Bug 可复现，确实不是 Feature 或者乌龙，并且能让其他人也验证该 Bug 的存在，我们非常鼓励你你向开发团队提出 issue，请参考这个[Github 上的 issue](https://github.com/simplecov-ruby/simplecov-html/issues/92?fileGuid=qk0PYOfe3cYJ6ha7)，用**简洁准确**的语言进行描述。例如：
     - 对于GitHub Desktop，可以在这里提交issue：https://github.com/desktop/desktop
   - 对于其他软件，通过官方提供的反馈方式提交你发现的Bug，例如：
-    - GitHub可访问：https://support.github.com/contact/feedback
     - CSDN：https://ask.csdn.net/questions/7398651
+    - GitHub可访问：https://support.github.com/contact/feedback
     - SegmentFault：https://segmentfault.com/0x
 
 ---
