--- a/homeworks/作业10_软件评测.md
+++ b/homeworks/作业10_软件评测.md
@@ -32,18 +32,23 @@
 
 那么，可以看看这个只评价界面的分析报告，争取写出类似水平的报告来：[如何评价微软的UI设计？](https://www.zhihu.com/question/50117613/answer/119997145?fileGuid=qk0PYOfe3cYJ6ha7)
 
-首先提供往年的案例分析优秀作业用于参考：
+首先提供往年的软件评测优秀作业用于参考：
+
+**注：本学期作业修改了测评对象；参考北航的作业要求，细节和要求上也有不少变动；下列参考仅供同学们大致了解本次作业内容。**
 
 [RadishBear](https://www.cnblogs.com/radishbear/p/12730986.html), [gnulxj](https://www.cnblogs.com/gnulxj/p/12728797.html), [冰糖葫芦棒棒冰](https://www.cnblogs.com/linlin123/p/12728306.html), [张家榜](https://www.cnblogs.com/dante206/p/12729435.html), [FZU_WSH](https://www.cnblogs.com/wshbolgs/p/12727743.html)
 
 [aahorse](https://www.cnblogs.com/aahorse/p/12706898.html), [theTuring](https://www.cnblogs.com/theTuring/p/12716970.html), [zwn-blog](https://www.cnblogs.com/zwn-blog/p/12721743.html), [tyheng](https://www.cnblogs.com/tyheng/p/12714007.html)
 
-**注：本学期作业参考北航的作业要求，有不少细节和要求上的变动；上述参考仅供同学们大致了解本次作业内容**
-
 以及北航的两份作业作为参考：
-[Shaun_Yao](https://www.cnblogs.com/tcyhost/p/14620045.html), [VOIDMalkuth's Blog](https://www.cnblogs.com/VOIDMalkuth/p/14634341.html)
 
-**注：上方两份作业分别选择了第一类产品和第二类产品；可以参考BUG描述部分；为了避免先入为主，可以选择跳过其他分析部分。禁止抄袭。**
+**注：**
+
+- **请先仔细阅读本次作业的要求；**
+
+- **下方两份作业分别覆盖了本次作业的第一类产品和第二类产品；对于本次作业的全部要求，都建议你完成自己的思考，在完成作业后可以选择参阅，看看自己是否有可以提升的地方。否则可能先入为主，影响到自己的思考。禁止抄袭。**
+
+[Shaun_Yao](https://www.cnblogs.com/tcyhost/p/14620045.html), [VOIDMalkuth's Blog](https://www.cnblogs.com/VOIDMalkuth/p/14634341.html)
 
 # 一、本学期供分析的产品：
 
@@ -56,7 +61,7 @@
 
    **注：**
    
-   - 对于问答网站，存在两种用户的需求：提问者和回答者；可以考虑从两个角度改进。
+   - 对于问答网站，用户需求有提问和回答等；可以考虑从多个角度评测。
    
    - 提问需要遵守相应社区规范（例如[Stack Overflow: how to ask](https://stackoverflow.com/questions/ask/advice)，[如何写高质量的提问和回答](https://ask.csdn.net/questions/7400889)，[SegmentFault FAQ](https://segmentfault.com/faq)），避免无意义的水问题。
    
@@ -150,7 +155,24 @@
 
 - 对于GitHub和Stack Overflow等对象，找出高质量的功能性Bug可能不是一件容易的事情；因此要求**至少从三个测评对象中找到1个高质量的功能性Bug**。
 
-- 博客需要分别描述同类中三个软件的体验、BUG（如果没有找到，说明即可）和结论；
+- 博客需要分别描述同类中三个软件的体验、BUG（如果没有找到，说明即可）和结论，例如:
+
+  ```
+  - CSDN问答
+    - 体验
+    - BUG
+    - 结论
+  - Stack Overflow
+    - 体验
+    - BUG
+    - 结论
+  - SegmentFault
+    - 体验
+    - BUG
+    - 结论
+  ```
+
+  
 
 ## 第二部分 分析(参考8.6节对工作的估计，和14.1节软件工程的质量)
 
@@ -207,17 +229,17 @@
 
 ### 1、为了方便阅读以及助教评分，请大家在博客开头给出博文目录，作为内容的索引
 
-务必包含以下大标题，标题含义相近即可，你可以个性化你自己的大标题，并添加下属的小标题。以Git仓库托管类软件为例：
+务必包含以下大标题，标题含义相近即可，你可以个性化你自己的大标题，并添加下属的小标题。以问答类软件为例：
 - 第一部分 调研，评测
-  - CODE.CHINA
+  - CSDN问答
     - 体验
     - BUG
     - 结论
-  - GitHub
+  - Stack Overflow
     - 体验
     - BUG
     - 结论
-  - Gitee
+  - SegmentFault
     - 体验
     - BUG
     - 结论
